--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="/src/assets/favicon-32x32.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content=" a advice gnereator app built with react/vite">
-    <meta name="author" content="okafor glory">
+    <meta name="author" content="glory okafor">
     <meta name="keyword" content="react,html,css, api, advice,generator">
-    <title>Frontend Mentor | Advice generator app</title>
+    <title> Advice generator app</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
